BaseTools/Source/Python/Ecc/CParser4/CParser.py
# Generated from C.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO


## @file
# The file defines the parser for C source files.
#
# THIS FILE IS AUTO-GENENERATED. PLEASE DON NOT MODIFY THIS FILE.
# This file is generated by running:
# java org.antlr.Tool C.g
#
# Copyright (c) 2009 - 2010, Intel Corporation  All rights reserved.
#
# This program and the accompanying materials are licensed and made available
# under the terms and conditions of the BSD License which accompanies this
# distribution.  The full text of the license may be found at:
#   http://opensource.org/licenses/bsd-license.php
#
# THE PROGRAM IS DISTRIBUTED UNDER THE BSD LICENSE ON AN "AS IS" BASIS,
# WITHOUT WARRANTIES OR REPRESENTATIONS OF ANY KIND, EITHER EXPRESS OR IMPLIED.
#
##

import Ecc.CodeFragment as CodeFragment
import Ecc.FileProfile as FileProfile


class CParser ( Parser ):

    grammarFileName = "C.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "';'", "'typedef'", "','", "'='",
                     "'extern'", "'static'", "'auto'", "'register'", "'STATIC'",
                     "'void'", "'char'", "'short'", "'int'", "'long'", "'float'",
                     "'double'", "'signed'", "'unsigned'", "'}'", "'struct'",
                     "'union'", "':'", "'enum'", "'const'", "'volatile'",
                     "'IN'", "'OUT'", "'OPTIONAL'", "'CONST'", "'UNALIGNED'",
                     "'VOLATILE'", "'GLOBAL_REMOVE_IF_UNREFERENCED'", "'EFIAPI'",
                     "'EFI_BOOTSERVICE'", "'EFI_RUNTIMESERVICE'", "'PACKED'",
                     "'('", "')'", "'['", "']'", "'*'", "'...'", "'+'",
                     "'-'", "'/'", "'%'", "'++'", "'--'", "'sizeof'", "'.'",
                     "'->'", "'&'", "'~'", "'!'", "'*='", "'/='", "'%='",
                     "'+='", "'-='", "'<<='", "'>>='", "'&='", "'^='", "'|='",
                     "'?'", "'||'", "'&&'", "'|'", "'^'", "'=='", "'!='",
                     "'<'", "'>'", "'<='", "'>='", "'<<'", "'>>'", "'__asm__'",
                     "'_asm'", "'__asm'", "'case'", "'default'", "'if'",
                     "'else'", "'switch'", "'while'", "'do'", "'goto'",
                     "'continue'", "'break'", "'return'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "IDENTIFIER", "CHARACTER_LITERAL", "STRING_LITERAL",
                      "HEX_LITERAL", "DECIMAL_LITERAL", "OCTAL_LITERAL",
                      "FLOATING_POINT_LITERAL", "WS", "BS", "UnicodeVocabulary",
                      "COMMENT", "LINE_COMMENT", "LINE_COMMAND" ]

    RULE_translation_unit = 0
    RULE_external_declaration = 1
    RULE_function_definition = 2
    RULE_declaration_specifiers = 3
    RULE_declaration = 4
    RULE_init_declarator_list = 5
    RULE_init_declarator = 6
    RULE_storage_class_specifier = 7
    RULE_type_specifier = 8
    RULE_type_id = 9
    RULE_struct_or_union_specifier = 10
    RULE_struct_or_union = 11
    RULE_struct_declaration_list = 12
    RULE_struct_declaration = 13
    RULE_specifier_qualifier_list = 14
    RULE_struct_declarator_list = 15
    RULE_struct_declarator = 16
    RULE_enum_specifier = 17
    RULE_enumerator_list = 18
    RULE_enumerator = 19
    RULE_type_qualifier = 20
    RULE_declarator = 21
    RULE_direct_declarator = 22
    RULE_declarator_suffix = 23
    RULE_pointer = 24
    RULE_parameter_type_list = 25
    RULE_parameter_list = 26
    RULE_parameter_declaration = 27
    RULE_identifier_list = 28
    RULE_type_name = 29
    RULE_abstract_declarator = 30
    RULE_direct_abstract_declarator = 31
    RULE_abstract_declarator_suffix = 32
    RULE_initializer = 33
    RULE_initializer_list = 34
    RULE_argument_expression_list = 35
    RULE_additive_expression = 36
    RULE_multiplicative_expression = 37
    RULE_cast_expression = 38
    RULE_unary_expression = 39
    RULE_postfix_expression = 40
    RULE_macro_parameter_list = 41
    RULE_unary_operator = 42
    RULE_primary_expression = 43
    RULE_constant = 44
    RULE_expression = 45
    RULE_constant_expression = 46
    RULE_assignment_expression = 47
    RULE_lvalue = 48
    RULE_assignment_operator = 49
    RULE_conditional_expression = 50
    RULE_logical_or_expression = 51
    RULE_logical_and_expression = 52
    RULE_inclusive_or_expression = 53
    RULE_exclusive_or_expression = 54
    RULE_and_expression = 55
    RULE_equality_expression = 56
    RULE_relational_expression = 57
    RULE_shift_expression = 58
    RULE_statement = 59
    RULE_asm2_statement = 60
    RULE_asm1_statement = 61
    RULE_asm_statement = 62
    RULE_macro_statement = 63
    RULE_labeled_statement = 64
    RULE_compound_statement = 65
    RULE_statement_list = 66
    RULE_expression_statement = 67
    RULE_selection_statement = 68
    RULE_iteration_statement = 69
    RULE_jump_statement = 70

    ruleNames =  [ "translation_unit", "external_declaration", "function_definition",
                   "declaration_specifiers", "declaration", "init_declarator_list",
                   "init_declarator", "storage_class_specifier", "type_specifier",
                   "type_id", "struct_or_union_specifier", "struct_or_union",
                   "struct_declaration_list", "struct_declaration", "specifier_qualifier_list",
                   "struct_declarator_list", "struct_declarator", "enum_specifier",
                   "enumerator_list", "enumerator", "type_qualifier", "declarator",
                   "direct_declarator", "declarator_suffix", "pointer",
                   "parameter_type_list", "parameter_list", "parameter_declaration",
                   "identifier_list", "type_name", "abstract_declarator",
                   "direct_abstract_declarator", "abstract_declarator_suffix",
                   "initializer", "initializer_list", "argument_expression_list",
                   "additive_expression", "multiplicative_expression", "cast_expression",
                   "unary_expression", "postfix_expression", "macro_parameter_list",
                   "unary_operator", "primary_expression", "constant", "expression",
                   "constant_expression", "assignment_expression", "lvalue",
                   "assignment_operator", "conditional_expression", "logical_or_expression",
                   "logical_and_expression", "inclusive_or_expression",
                   "exclusive_or_expression", "and_expression", "equality_expression",
                   "relational_expression", "shift_expression", "statement",
                   "asm2_statement", "asm1_statement", "asm_statement",
                   "macro_statement", "labeled_statement", "compound_statement",
                   "statement_list", "expression_statement", "selection_statement",
                   "iteration_statement", "jump_statement" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    T__77=78
    T__78=79
    T__79=80
    T__80=81
    T__81=82
    T__82=83
    T__83=84
    T__84=85
    T__85=86
    T__86=87
    T__87=88
    T__88=89
    T__89=90
    T__90=91
    T__91=92
    IDENTIFIER=93
    CHARACTER_LITERAL=94
    STRING_LITERAL=95
    HEX_LITERAL=96
    DECIMAL_LITERAL=97
    OCTAL_LITERAL=98
    FLOATING_POINT_LITERAL=99
    WS=100
    BS=101
    UnicodeVocabulary=102
    COMMENT=103
    LINE_COMMENT=104
    LINE_COMMAND=105

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    def printTokenInfo(self, line, offset, tokenText):
        print(str(line)+ ',' + str(offset) + ':' + str(tokenText))

    def StorePredicateExpression(self, StartLine, StartOffset, EndLine, EndOffset, Text):
        PredExp = CodeFragment.PredicateExpression(Text, (StartLine, StartOffset), (EndLine, EndOffset))
        FileProfile.PredicateExpressionList.append(PredExp)

    def StoreEnumerationDefinition(self, StartLine, StartOffset, EndLine, EndOffset, Text):
        EnumDef = CodeFragment.EnumerationDefinition(Text, (StartLine, StartOffset), (EndLine, EndOffset))
        FileProfile.EnumerationDefinitionList.append(EnumDef)

    def StoreStructUnionDefinition(self, StartLine, StartOffset, EndLine, EndOffset, Text):
        SUDef = CodeFragment.StructUnionDefinition(Text, (StartLine, StartOffset), (EndLine, EndOffset))
        FileProfile.StructUnionDefinitionList.append(SUDef)

    def StoreTypedefDefinition(self, StartLine, StartOffset, EndLine, EndOffset, FromText, ToText):
        Tdef = CodeFragment.TypedefDefinition(FromText, ToText, (StartLine, StartOffset), (EndLine, EndOffset))
        FileProfile.TypedefDefinitionList.append(Tdef)

    def StoreFunctionDefinition(self, StartLine, StartOffset, EndLine, EndOffset, ModifierText, DeclText, LeftBraceLine, LeftBraceOffset, DeclLine, DeclOffset):
        FuncDef = CodeFragment.FunctionDefinition(ModifierText, DeclText, (StartLine, StartOffset), (EndLine, EndOffset), (LeftBraceLine, LeftBraceOffset), (DeclLine, DeclOffset))
        FileProfile.FunctionDefinitionList.append(FuncDef)

    def StoreVariableDeclaration(self, StartLine, StartOffset, EndLine, EndOffset, ModifierText, DeclText):
        VarDecl = CodeFragment.VariableDeclaration(ModifierText, DeclText, (StartLine, StartOffset), (EndLine, EndOffset))
        FileProfile.VariableDeclarationList.append(VarDecl)

    def StoreFunctionCalling(self, StartLine, StartOffset, EndLine, EndOffset, FuncName, ParamList):
        FuncCall = CodeFragment.FunctionCalling(FuncName, ParamList, (StartLine, StartOffset), (EndLine, EndOffset))
        FileProfile.FunctionCallingList.append(FuncCall)




    class Translation_unitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def external_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.External_declarationContext)
            else:
                return self.getTypedRuleContext(CParser.External_declarationContext,i)


        def getRuleIndex(self):
            return CParser.RULE_translation_unit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTranslation_unit" ):
                listener.enterTranslation_unit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTranslation_unit" ):
                listener.exitTranslation_unit(self)




    def translation_unit(self):

        localctx = CParser.Translation_unitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_translation_unit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4947792887752) != 0) or _la==93:
                self.state = 142
                self.external_declaration()
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class External_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarator(self):
            return self.getTypedRuleContext(CParser.DeclaratorContext,0)


        def declaration_specifiers(self):
            return self.getTypedRuleContext(CParser.Declaration_specifiersContext,0)


        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(CParser.DeclarationContext,i)


        def function_definition(self):
            return self.getTypedRuleContext(CParser.Function_definitionContext,0)


        def macro_statement(self):
            return self.getTypedRuleContext(CParser.Macro_statementContext,0)


        def getRuleIndex(self):
            return CParser.RULE_external_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExternal_declaration" ):
                listener.enterExternal_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExternal_declaration" ):
                listener.exitExternal_declaration(self)




    def external_declaration(self):

        localctx = CParser.External_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_external_declaration)
        self._la = 0 # Token type
        try:
            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 149
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 148
                    self.declaration_specifiers()


                self.state = 151
                self.declarator()
                self.state = 155
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 274868469704) != 0) or _la==93:
                    self.state = 152
                    self.declaration()
                    self.state = 157
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 158
                self.match(CParser.T__0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 160
                self.function_definition()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 161
                self.declaration()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 162
                self.macro_statement()
                self.state = 164
                self._errHandler.sync(self)
                _la = self._input.LA(1)
